# pl-python-autograder-v2

./: .gitignore  README.md  autograder_results.json  pyproject.toml  pytest.ini  quick_start.md
.github/workflows/: lint.yaml  publish.yaml  test.yaml
docker/: Dockerfile  requirements.txt
pl_python_autograder_v2/: __main__.py  cli.py  loader.py
src/pl_pytest_autograder/: __main__.py  _student_code_runner.py  cli.py  fixture.py  plugin.py  session.py  student_code_runner.py  table.py  utils.py
src/pl_python_autograder_v2/: cli.py  execute_tests.py  loader.py  restricted_execution.py  restricted_import.py  test_case.py  test_result.py  unit_test.py
src/pytest_pl_grader/: _student_code_runner.py  fixture.py  plugin.py  utils.py
src/pytest_prairielearn_grader/: plugin.py
tests/: examples.py  test_autograder_scenarios.py  test_benchmark.py  test_function.py  test_function_name.py  test_quiz_2.py  test_quiz_2_2.py  test_sandbox.py  test_serialize.py  verify_autograder.py  verify_function.py
tests/data/: student_code.py  test.py
tests/scenario_root/test_core_exception/: expected_outcome.json  scenario.py
tests/scenario_root/test_fixture_exception/: scenario.py
tests/scenario_root/test_function_name/: data.json  expected_outcome.json
tests/scenario_root/test_initialization_timeout/: scenario.py
tests/scenario_root/test_matplotlib_plots/: scenario.py  scenario_simple.py  student_code.py  student_code_simple.py
tests/scenario_root/test_module_sandbox/: __init__.py  data.json  expected_outcome.json  scenario.py  setup_code.py  student_code.py
tests/scenario_root/test_module_sandbox_calc/: __init__.py  expected_outcome.json  scenario.py  student_code_calculator.py
tests/scenario_root/test_module_sandbox_multi/: __init__.py  expected_outcome.json  scenario.py  student_code_counter.py
tests/scenario_root/test_module_sandbox_timeout/: __init__.py  expected_outcome.json  scenario.py  student_code.py
tests/scenario_root/test_private_namespace/: scenario.py  setup_code.py
tests/scenario_root/test_privilege_drop/: expected_outcome.json  scenario.py  student_code.py
tests/scenario_root/test_quiz_2_1/: expected_outcome.json  scenario.py
tests/scenario_root/test_quiz_3_1/: scenario.py
tests/scenario_root/test_quiz_3_2/: scenario.py
tests/scenario_root/test_sandbox/: expected_outcome.json  scenario.py
tests/scenario_root/test_stdout_feature/: expected_outcome.json  scenario.py
tests/scenario_root/test_timeout/: expected_outcome.json  scenario.py
tests/test_benchmark/: student_code.py
tests/test_quiz_2/: student_code_33.py
tests/test_quiz_2_2/: expected_outcome.json
tests/test_sandbox/: data.json
