[tool.poetry]
name = "pl-python-autograder-v2"
version = "0.1.0"
description = ""
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
readme = "README.md"
packages = [{include = "pl_python_autograder_v2"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
