[tool.poetry]
name = "pl-python-autograder-v2"
version = "0.1.0"
description = ""
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
readme = "README.md"
packages = [{include = "pl_python_autograder_v2"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
jsonargparse = "^4.22.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Grade
[tool.poetry.scripts]
pl_grade = "pl_pythot_autograder_v2.cli:main"

# Setup actions with this: https://github.com/ymyzk/tox-gh-actions
# Example https://github.com/Ovsyanka83/autograder/blob/main/pyproject.toml
# https://tox.wiki/en/latest/user_guide.html
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39, py310, mypy

[testenv]
changedir = tests
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync --with test
commands =
    poetry run pytest tests --import-mode importlib

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310, mypy
"""
