[tool.poetry]
name = "pl-python-autograder-v2"
version = "0.1.0"
description = ""
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
readme = "README.md"
packages = [
    {include = "pl_python_autograder_v2", from = "src"}
]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.12"
jsonargparse = "^4.22.1"

# Define testing dependencies and make optional
[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"

# Define typechecking dependencies and make optional
[tool.poetry.group.typecheck]
optional = true

[tool.poetry.group.typecheck.dependencies]
mypy = "1.4.1"

# Define linting dependencies and make optional
[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "6.0.0"
flake8-black = "0.3.6"
flake8-isort = "6.0.0"
Flake8-pyproject = "1.2.3"
black = "23.3.0"
isort = "5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Define main CLI entrypoint
[tool.poetry.scripts]
pl_grade = "pl_pythot_autograder_v2.cli:main"

# Setup actions with this: https://github.com/ymyzk/tox-gh-actions
# Example https://github.com/Ovsyanka83/autograder/blob/main/pyproject.toml
# https://tox.wiki/en/latest/user_guide.html
[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
envlist = py37, py38, py39, py310, mypy

[testenv]
allowlist_externals = poetry
commands_pre =
    poetry install --no-root --sync --with test
commands =
    poetry run pytest tests --import-mode importlib

[testenv:mypy]
skip_install = true
commands_pre =
    poetry install --no-root --sync --with typecheck
commands =
    poetry run mypy src/

[testenv:lint]
skip_install = true
commands_pre =
    poetry install --no-root --sync --with lint
commands =
    poetry run flake8p

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310, mypy, lint
"""

# Using verify instead of test to avoid conflicts with autograder code
[tool.pytest.ini_options]
python_files = "verify_*.py"
python_classes = "Verify"
python_functions = "verify_*"
testpaths = "tests/"
pythonpath = ["src"]

[tool.mypy]
disallow_untyped_defs = true

[tool.flake8]
# Black compatibility
max-line-length = 88
extend-ignore = ["E203", "W503"]

# Per <https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#profile>
[tool.isort]
profile = "black"

#TODO convert this layout with this guide: https://browniebroke.com/blog/convert-existing-poetry-to-src-layout/
